--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@ TODO:
 - fix sample levels
 - update credits for everything
 - update exanimation docs
+- documentation advising people of the limits of DSS
