--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,6 @@
+v1.04
+- hot fix for ExNMSTL but for hammers this time
+
 v1.03
 - fix missing cape interaction in custom extended hammer
 - fix bug with dry bones throwing fireballs caused by DSS vs ExNMSTL
