--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,9 @@
+v1.06
+- fixed issue with music not playing after the goal tape
+- fixed SFX echo object not always running
+- fixed issue in the stacking block sprites that crashed the game in vertical levels
+- fixed the remove power-up block not removing cape flight properly
+
 v1.05
 - dropped the Extended No More Sprite Tiles patch, causing too many issues with DSS
 - fixed missing cape interactions in custom bro projectiles
