--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,8 @@
+v1.08
+- added patches from Kevin and spoonsss to optimized NMI and reduce flickering
+- adjusted the global exanimations to use fewer slots
+- updated retry to version 0.4.4
+
 v1.07
 - fixed issue with spin jump SFX and the custom eating block
 - fixed issue with the stacking block bounce sprites crashing game with line guide sprites
