--- a/Changelog.txt
+++ b/Changelog.txt
@@ -6,6 +6,7 @@ v1.10
 - fix issues with the custom bros not having unique colors
 - fix issue with the boomerang not being spin-jumpable
 - fix cutoff in SMAS hills background
+- patch titlescreen garbage cleaner
 
 v1.09
 - patch DMA Queue and Block Change Optimize to fix growing pipe problems
