--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
 - fix bumpty feet and hands in dss
 - fix ptooie spike ball in dss
 - parabeetle json
+- update the external Graphics will all the new sprite additions
