--- a/TODO.txt
+++ b/TODO.txt
@@ -3,3 +3,4 @@
 - parabeetle json
 - update the external Graphics will all the new sprite additions
 - fix regen pokey dead frame
+- wooden spike json
