fix chain chomp frames

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,3 +2,4 @@
 - better json for all sprites
 - check tilemap for homing bullet
 - fix arrow in smb3 directional platform
+- make yi spike use its own gfx to not load same twice
