--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,11 @@
+v1.11
+- many sprite additions:
+	- SMB2/3: ptooie, nipper, pansers, phanto, para-beetles, chain-chomps, directional platforms, albatoss
+	- YI: cloud drop, bumpty and varieties, spike & ball
+	- variants: other pokeys, diagonal springboards, sideways wooden spike, flying mega moles
+	- other: homing bullet bill, trampoline, bumper, cooligan
+- patched controller optimization from spoonsss
+
 v1.10
 - update piranha and venus plant graphics to vanilla
 - add more uberasm objects, mainly for counter break and power up filtering
